deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-website
spec:
  replicas: 2
  selector:
    matchLabels: {app: devops-website}
  template:
    metadata: {labels: {app: devops-website}}
    spec:
      containers:
      - name: devops-website
        image: localhost:32000/devops-website:v2
        ports: [{containerPort: 80}]
