ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-website-ingress

spec:
  ingressClassName: public

  rules:
    - host: devops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-website-service
                port:
                  number: 80
